--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,34 @@
-body {
-    height: 100vh;
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#intro {
+    background: url('../img/1.jpg') 50% 0 no-repeat fixed;
+    color: #ffffff;
+    height: 700px;
+    margin: 0 auto;
+    padding: 0;
 }
 
-#main {
-    position: relative;
-    margin: 100px auto;
-    padding: 5px;
-    width: 660px;
-    height: 360px;
-    background-color: silver;
-    border: 5px solid grey;
-    border-radius: 15px;
+#second {
+    background: url('../img/2.jpg') 50% 0 no-repeat fixed;
+    color: #fff;
+    height: 400px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 0;
 }
 
-#scr {
-    margin: 20px auto;
-    width: 600px;
-    height: 320px;
-    margin-top: 20px;
-    background-color: #fff;
-    background-size: cover;
-    border: 2px solid #000;
-    border-radius: 10px;
+#third {
+    background: url('../img/3.jpg') 50% 0 no-repeat fixed;
+    color: #fff;
+    height: 300px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 0;
 }
 
-button {
-    position: absolute;
-    top: 150px;
-    width: 25px;
-    height: 70px;
-    font: 12pt arial,tahoma,sans-serif;
-    text-align: center;
-    cursor: pointer;
-}
-
-.left {
-    left: 5px;
-}
-
-.right {
-    right: 5px;
+#fifth {
+    background: url('../img/1.jpg') 50% 0 no-repeat fixed;
+    color: #fff;
+    height: 500px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 0;
 }
